--- a/examples/canvas_web/index.html
+++ b/examples/canvas_web/index.html
@@ -88,7 +88,7 @@
     <body>
         <!-- The WASM code will resize the canvas dynamically -->
         <!-- the id is hardcoded in main.rs . so, make sure both match. -->
-        <canvas id="the_canvas_id"></canvas>
+        <canvas id="canvas"></canvas>
     </body>
 </html>
 
