--- a/examples/colors_web/index.html
+++ b/examples/colors_web/index.html
@@ -118,7 +118,7 @@
     <body>
         <!-- The WASM code will resize the canvas dynamically -->
         <!-- the id is hardcoded in main.rs . so, make sure both match. -->
-        <canvas id="the_canvas_id"></canvas>
+        <canvas id="colors"></canvas>
 
         <!--Register Service Worker. this will cache the wasm / js scripts for offline use (for PWA functionality). -->
         <!-- Force refresh (Ctrl + F5) to load the latest files instead of cached files  -->
