--- a/examples/demo_web/index.html
+++ b/examples/demo_web/index.html
@@ -118,21 +118,7 @@
     <body>
         <!-- The WASM code will resize the canvas dynamically -->
         <!-- the id is hardcoded in main.rs . so, make sure both match. -->
-        <canvas id="the_canvas_id"></canvas>
-
-        <!--Register Service Worker. this will cache the wasm / js scripts for offline use (for PWA functionality). -->
-        <!-- Force refresh (Ctrl + F5) to load the latest files instead of cached files  -->
-        <script>
-            // We disable caching during development so that we always view the latest version.
-            if (
-                "serviceWorker" in navigator &&
-                window.location.hash !== "#dev"
-            ) {
-                window.addEventListener("load", function () {
-                    navigator.serviceWorker.register("sw.js");
-                });
-            }
-        </script>
+        <canvas id="demo"></canvas>
     </body>
 </html>
 
